prevent overflowing content

--- a/source/_patterns/03-organisms/headers/wwu-header/_wwu-header.scss
+++ b/source/_patterns/03-organisms/headers/wwu-header/_wwu-header.scss
@@ -111,7 +111,7 @@
     display: none;
   }
   position: relative;
-  right: 0.5rem;
+  width: initial;
   color: $white;
   border-radius: 0;
   background: transparent;
@@ -150,7 +150,6 @@
   &.open {
     visibility: visible;
     overflow-y: hidden;
-    width: 100%;
   }
 
   &.closed {
